<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/aboutMargin"
    android:orientation="vertical">


    <Switch
        android:id="@+id/switchClassic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_classic" />

    <Switch
        android:id="@+id/switchAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_audio" />

    <Switch
        android:id="@+id/switchFullAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_full_audio" />

    <Switch
        android:id="@+id/switchNoHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_no_help" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <Switch
        android:id="@+id/switchFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_file_name" />


</LinearLayout>

